# dkim-milter

./: .gitlab-ci.yml  .woodpecker.yml  CHANGELOG.md  Cargo.toml  README.md  TUTORIAL.md  dist-workspace.toml  dkim-milter.8  dkim-milter.conf.5  dkim-milter.service
sample-conf/: connection-overrides  dkim-milter.conf  ed25519.pem  recipient-overrides  rsa.pem  signing-keys  signing-senders
sample-conf/overrides/: body-len.conf  canon-simple.conf  reject.conf  strict-header.conf
sample-conf/recipient-overrides.d/: body-len.conf
sample-conf/sketch/: signing-senders
sample-config/: dkim-milter.conf  signing-keys
sql/: sqlite.sql
src/: auth_results.rs  callbacks.rs  config.rs  crypto.rs  format.rs  lib.rs  main.rs  resolver.rs  session.rs  sign.rs  util.rs  verify.rs
src/config/: format.rs  mod.rs  model.rs  params.rs  parse.rs  read.rs  reload.rs  tables.rs
src/datastore/: filesystem.rs  mod.rs  sqlite.rs
tests/: delete_auth_results.rs  dkim-milter.conf  live.rs  reject.rs  sign_both.rs  sign_multiple.rs  verify_basic.rs  verify_ed25519.rs  verify_live.rs  verify_rsa.rs
tests/common/: mod.rs
tests/delete_auth_results/: dkim-milter.conf
tests/live/: dkim-milter.conf
tests/reject/: dkim-milter.conf
tests/sign_both/: dkim-milter.conf  recipient-overrides  rsa.pem  signing-keys  signing_senders  simple-canon.conf
tests/sign_multiple/: dkim-milter.conf  ed25519.pem  recipient-overrides  signing-keys
tests/verify_basic/: dkim-milter.conf
tests/verify_ed25519/: dkim-milter.conf  ed25519.pem
tests/verify_live/: dkim-milter.conf
