[package]
name = "dkim-milter"
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.74.0"
description = "Milter for DKIM signing and verification"
license = "GPL-3.0-or-later"
categories = ["email"]
keywords = ["dkim", "email", "milter"]
repository = "https://github.com/chatmail/dkim-milter"
exclude = ["/.gitignore", "/.woodpecker.yml"]

[dependencies]
byte-strings = "0.3.1"
domain = { version = "0.10.0", features = ["resolv"] }
futures-util = "0.3.30"
idna = "0.4.0"
indymilter = "0.3.0"
ipnet = "2.9.0"
log = "0.4.21"
regex = "1.10.4"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio"], optional = true }
syslog = "6.1.0"
tokio = { version = "1.37.0", features = ["fs", "macros", "net", "rt", "rt-multi-thread", "sync"] }
viadkim = "0.2.0"

[dev-dependencies]
indymilter-test = { version = "0.2.0", features = ["regex"] }

[features]
# Reverts cryptographic algorithm and key usage to before RFC 8301.
pre-rfc8301 = ["viadkim/pre-rfc8301"]
# Makes available the SQLite data source.
sqlite = ["dep:sqlx", "sqlx/sqlite"]
